--- a/.github/workflows/cachix.yml
+++ b/.github/workflows/cachix.yml
@@ -12,7 +12,6 @@ jobs:
         nix_path: nixpkgs=channel:nixos-unstable
     - uses: cachix/cachix-action@v14
       with:
-        name: comfybyte
+        name: metalheart
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: nix-build
-    - run: nix-shell --run "echo OK"
+    - run: nix build
