--- a/.github/workflows/cachix.yml
+++ b/.github/workflows/cachix.yml
@@ -12,6 +12,6 @@ jobs:
         nix_path: nixpkgs=channel:nixos-unstable
     - uses: cachix/cachix-action@v14
       with:
-        name: metalheart
+        name: comfybyte
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     - run: nix run github:Mic92/nix-fast-build -- --flake ".#packages" --no-nom --skip-cached
